[package]
name = "native_codec_impl"
version = "1.4.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@erlang-solutions.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.7.0"
features = ["extension-module"]

[dependencies]
byte = "0.2"
compress = "0.2.1"
failure = "0.1.2"
byteorder = "1.2.6"
