[package]
name = "native_codec_impl"
version = "1.4.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@erlang-solutions.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.7.0"
features = ["extension-module"]

[dependencies]
compress = "0.2"
failure = "0.1"